--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "next start -p 8000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^5.1.3",
     "express": "^4.16.2",
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^5.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
